--- a/debug.ipynb
+++ b/debug.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -144,13 +144,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Successfully Connected!\n",
+      "Successfully Connected!\n",
       "Successfully Connected!\n",
       "Successfully Connected!\n",
       "Successfully Connected!\n",
@@ -159,28 +161,31 @@
     }
    ],
    "source": [
-    "execute_command(\"CONNECT R2 A1\")\n",
-    "execute_command(\"CONNECT A3 R2\")\n",
-    "execute_command(\"CONNECT A4 A3\")\n",
-    "execute_command(\"CONNECT A5 A4\")"
+    "execute_command(\"CONNECT A1 A2\")\n",
+    "execute_command(\"CONNECT A2 A3\")\n",
+    "execute_command(\"CONNECT A3 A4\")\n",
+    "execute_command(\"CONNECT A4 A5\")\n",
+    "execute_command(\"CONNECT A1 A3\")\n",
+    "execute_command(\"CONNECT A3 A5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "> Route found! ['A5', 'A4', 'A3', 'R2', 'A1']\n",
+      "> Route found! ['A1', 'A2', 'A3', 'A4', 'A5']\n",
+      "> Route found! ['A1', 'A2', 'A3', 'A5']\n",
       "Above are the routes found\n"
      ]
     }
    ],
    "source": [
-    "execute_command(\"INFO_ROUTE A5 A1\")"
+    "execute_command(\"INFO_ROUTE A1 A5\")"
    ]
   }
  ],
